--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="google-site-verification" content="XXs1rHCMiF0o2ogXg9mYvtKr_MVuFmAc85iO1U5evQI" />
 
 
-    <meta property="og:url" content="http://www.eggboo.com">
+    <!-- <meta property="og:url" content="http://www.eggboo.com"> -->
     <meta property="og:title" content="TaxiNet">
     <meta property="og:description" content="Find affordable, top-rated private tutors in 250+ subjects and test prep on Eggboo.com. Quick online scheduling for in-person and online tutoring help.">
     <meta property="og:image" content="http://www.eggboo.com/images/taxinetcab.jpg">
